<resources>
    <string name="app_name">Urban Food</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_text">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="your_email">Your email</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_account">Login to your Account</string>
    <string name="welcome">Welcome Back</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create an account</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of birth</string>
    <string name="No_account">Don\'t have an account?</string>
    <string name="signUp_below_text">By clicking Sign up you agree to the following Terms and Conditions without reservation</string>
    <string name="verifynotv">We have sent you an SMS with a code to \n number +91</string>
    <string name="next">Next</string>
    <string name="social_network">Social Network</string>
    <string name="tv_receivepassword">You\'ll shortly receive an email with a\n code to setup a new password.</string>
    <string name="phone_otp_verification">Phone Verification</string>
    <string name="not_get_otp">Didn\'t you received any code?</string>
    <string name="resend_otp">Resend a new code.</string>
    <string name="enable_below_text">Please allow to use your location to show nearby restaurant on the map.</string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="enable_location">Enable Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_new_places">Discover new places</string>
    <string name="top_categories">Top categories</string>
    <string name="popular_this_week">Popular this week</string>
    <string name="free_delivery">Free delivery</string>
    <string name="phone_number">Phone Number</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="add">Add</string>
    <string name="Explore">Explore</string>
    <string name="Favorite">Favorite</string>
    <string name="MyOrder">MyOrder</string>
    <string name="MyProfile">My Profile</string>
    <string name="google_api_key1"><!--AIzaSyClH2UrK-86wwXvFTKLX2nHY7K9Ne9qLs0--></string>
    <string name="title_activity_manage_address">ManageAddress</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>