<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.createAccount.CreateAccount">

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/create_account"
        android:textSize="34sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_black"/>
    <EditText
        android:id="@+id/et_userName_crateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_create_account"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:text="@string/username"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/et_email_crateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_userName_crateAccount"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/email" />
    <EditText
        android:id="@+id/et_phone_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_email_crateAccount"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/phone" />
    <EditText
        android:id="@+id/et_birth_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_phone_createAccount"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/dob" />
    <EditText
        android:id="@+id/et_password_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_birth_createAccount"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/avenir_heavy"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_createAccount" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/signUp_below_text"/>



</androidx.constraintlayout.widget.ConstraintLayout>