<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.Login.LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_guide">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/titleblue"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_account"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_edit_text"
            android:fontFamily="@font/avenir_book"
            android:hint="@string/email"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/et_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_edit_text"
                android:fontFamily="@font/avenir_book"
                android:hint="@string/password"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/avenir_heavy"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Login"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgrt_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/tv_forgrt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_not_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No_account"
                android:gravity="end"
                app:layout_constraintEnd_toStartOf="@id/tv_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgrt_password_login" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_not_account"
                app:layout_constraintTop_toBottomOf="@id/tv_forgrt_password_login" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>