<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.Verifyphonescreen.VerifyPhone">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verify_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/avenir_black"
        android:gravity="center"
        android:padding="5dp"
        android:text="Verify your\nPhone"
        android:textColor="@color/titleblue"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verify_phone_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/avenir_book"
        android:gravity="center"
        android:text="@string/verifynotv"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verify_phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_edit_text"
        android:fontFamily="@font/avenir_book"
        android:hint="@string/phone"
        android:includeFontPadding="true"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tv_verify_phone_content"
        app:layout_constraintStart_toStartOf="@id/tv_verify_phone_content"
        app:layout_constraintTop_toBottomOf="@id/tv_verify_phone_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/next"
        android:textSize="17sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@id/et_phone_no"
        app:layout_constraintStart_toStartOf="@id/et_phone_no"
        app:layout_constraintTop_toBottomOf="@id/et_phone_no" />


</androidx.constraintlayout.widget.ConstraintLayout>