<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.ForgetPasswordScreen.forgetpassword">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"/>

    <TextView
        android:id="@+id/tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        android:textSize="34sp"
        android:text="@string/forgot_password"
        android:textColor="@color/titleblue"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:id="@+id/tv_forgetpassword_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_forgetpassword"
        app:layout_constraintEnd_toEndOf="@id/tv_forgetpassword"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgetpassword"
        android:text="@string/forgot_password_text"
        android:fontFamily="@font/avenir_book"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:padding="5dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background=""
        app:layout_constraintStart_toStartOf="@id/tv_forgetpassword"
        app:layout_constraintTop_toBottomOf="@id/tv_forgetpassword_content"
        app:layout_constraintEnd_toEndOf="@id/tv_forgetpassword"
</androidx.constraintlayout.widget.ConstraintLayout>