<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.otp.OtpActivity">



    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"

        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"/>

    <TextView
        android:id="@+id/tv_phone_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:text="@string/phone_otp_verification"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_black"/>


    <TextView
        android:id="@+id/tv_enter_otp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_phone_otp"
        app:layout_constraintEnd_toEndOf="@id/tv_phone_otp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_otp"
        android:text="Enter your OTP code here"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_book"/>


    <com.chaos.view.PinView
        android:id="@+id/et_otp"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_phone_otp"
        app:layout_constraintEnd_toEndOf="@id/tv_phone_otp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_otp_text"
        android:layout_marginTop="50dp"
        android:cursorVisible="true"
        android:inputType="text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemSpacing="35dp"
        android:autofillHints="smsOTPCode"
        android:importantForAutofill="yes"
        app:itemWidth="48dp"
        app:lineWidth="2dp"
        app:viewType="line" />


    <TextView
        android:id="@+id/tv_not_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_phone_otp"
        app:layout_constraintEnd_toEndOf="@id/tv_phone_otp"
        app:layout_constraintTop_toBottomOf="@id/et_otp"
        android:layout_marginTop="75dp"
        android:text="@string/not_get_otp"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_book"/>

    <TextView
        android:id="@+id/tv_resend_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_phone_otp"
        app:layout_constraintEnd_toEndOf="@id/tv_phone_otp"
        app:layout_constraintTop_toBottomOf="@id/tv_not_otp"
        android:text="@string/resend_otp"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_book"/>

</androidx.constraintlayout.widget.ConstraintLayout>
