<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_devide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_devide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_lock_overturning"/>
    <TextView
        android:id="@+id/tv_enable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_devide"
        android:text="@string/enable_your_location"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_black"/>
    <TextView
        android:id="@+id/tv_below_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enable_text"
        android:text="@string/enable_below_text"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_book"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="38dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/avenir_heavy"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/enable_location"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_below_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>